Commit3 added some extra conditions for solution

--- a/230205_Arsh_Jaswal/cfdata.ipynb
+++ b/230205_Arsh_Jaswal/cfdata.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,10 +227,15 @@
     "\n",
     "    #Delay after opening the editorial page\n",
     "    time.sleep(2)\n",
-    "\n",
-    "    WebDriverWait(driver, 6).until(\n",
-    "        EC.presence_of_element_located((By.CLASS_NAME, 'ttypography'))\n",
-    "    )\n",
+    "    try:\n",
+    "        WebDriverWait(driver, 6).until(\n",
+    "            EC.presence_of_element_located((By.CLASS_NAME, 'ttypography'))\n",
+    "        )\n",
+    "    except:\n",
+    "        driver.refresh()\n",
+    "        WebDriverWait(driver, 6).until(\n",
+    "            EC.presence_of_element_located((By.CLASS_NAME, 'ttypography'))\n",
+    "        )\n",
     "\n",
     "    editorial_soup = BeautifulSoup(driver.page_source, \"html.parser\")\n",
     "\n",
@@ -263,8 +268,28 @@
     "        solutions = typography_elements.get_text(strip=False)\n",
     "\n",
     "    start = solutions.rfind(contest_number+problem_part)\n",
-    "    end = solutions.find(contest_number,start+1)\n",
     "\n",
+    "    #PATTERNS FOR FINDING THE SOLUTION\n",
+    "    if start==-1:\n",
+    "        start = solutions.rfind(f\"{contest_number} {problem_part}\")\n",
+    "    if start==-1:\n",
+    "        start = solutions.rfind(f\"{contest_number}-{problem_part}\")\n",
+    "    if start==-1:\n",
+    "        start = solutions.rfind(f\"{problem_part} {contest_number}\")\n",
+    "    if start==-1:\n",
+    "        start = solutions.rfind(f\"{problem_part}-{contest_number}\")\n",
+    "\n",
+    "\n",
+    "    end = solutions.find(contest_number,start+1)\n",
+    "    #SOMETIMES, THE NEXT PROBLEM PRESENT IS NOT OF SAME CONTEST\n",
+    "    if end==-1:\n",
+    "        end = solutions.find(str(int(contest_number)+1),start+1)\n",
+    "    if end==-1:\n",
+    "        end = solutions.find(str(int(contest_number)-1),start+1)\n",
+    "    if end==-1:\n",
+    "        end = solutions.find(str(int(contest_number)+2),start+1)\n",
+    "    if end==-1:\n",
+    "        end = solutions.find(str(int(contest_number)-2),start+1)\n",
     "\n",
     "    if start!=-1:\n",
     "        if end!=-1:\n",
@@ -291,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +392,8 @@
     "\n",
     "            try:\n",
     "                specific_solution=find_solution(url, driver, editorial_url, contest_number, problem_part)\n",
-    "                if specific_solution!=\"No solution found\":\n",
+    "                if specific_solution != \"No solution found\":\n",
+    "                    # print(\"FOUND\")\n",
     "                    break  # SOlution found, break, we don't need to loop for something else\n",
     "\n",
     "            except Exception as e:\n",
@@ -388,6 +414,26 @@
     "\n",
     "    finally:\n",
     "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FOUND\n"
+     ]
+    }
+   ],
+   "source": [
+    "#DEBUGGING\n",
+    "# url=\"https://codeforces.com/problemset/problem/1894/B\"\n",
+    "# driver=uc.Chrome()\n",
+    "# codeforces_scrapper(url,driver)"
    ]
   },
   {
@@ -412,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -551,105 +597,199 @@
      "text": [
       "PAGE 1\n",
       "https://codeforces.com/problemset/problem/2050/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2050/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2048/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2046/A\n",
       "https://codeforces.com/problemset/problem/2044/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2041/E\n",
       "https://codeforces.com/problemset/problem/2041/B\n",
       "https://codeforces.com/problemset/problem/2040/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2039/C1\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2039/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2037/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2036/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2034/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2032/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2030/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2029/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2027/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2025/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2024/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2021/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2020/B\n",
       "https://codeforces.com/problemset/problem/2019/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2014/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2009/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2008/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2005/B2\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2005/B1\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2004/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2004/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2003/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2002/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2002/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2000/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/2000/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1999/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1999/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1998/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1997/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1997/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1996/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1995/B1\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1994/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1993/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1992/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1991/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1990/B\n",
       "https://codeforces.com/problemset/problem/1989/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1987/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1987/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1986/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1986/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1985/E\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1985/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1984/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1983/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1982/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1982/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1979/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1979/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1977/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1976/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1975/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1975/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1971/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1970/A1\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1969/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1968/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1966/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1958/A\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1957/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1955/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1954/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1954/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1951/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1950/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1948/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1946/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1945/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1944/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1942/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1941/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1941/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1935/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1934/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1933/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1933/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1932/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1931/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1930/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1928/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1927/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1926/C\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1925/B\n",
       "https://codeforces.com/problemset/problem/1923/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1922/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1921/D\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1920/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1917/B\n",
+      "FOUND\n",
       "https://codeforces.com/problemset/problem/1916/C\n",
-      "https://codeforces.com/problemset/problem/1916/B\n"
+      "FOUND\n",
+      "https://codeforces.com/problemset/problem/1916/B\n",
+      "FOUND\n"
      ]
     }
    ],
@@ -662,12 +802,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Extracting from page 2 (100-200 questions). Also finding time per question query for better analysis."
+    "#### Extracting from page 2 (100-200 questions)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -774,25 +914,13 @@
       "https://codeforces.com/problemset/problem/1790/D\n",
       "https://codeforces.com/problemset/problem/1790/C\n",
       "https://codeforces.com/problemset/problem/1788/B\n",
-      "https://codeforces.com/problemset/problem/1787/B\n",
-      "Average time per question: 8.228206243515015\n"
+      "https://codeforces.com/problemset/problem/1787/B\n"
      ]
     }
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    initialtime= time.time() # initial time\n",
-    "    main(rating_start,rating_end,2)\n",
-    "    finaltime=time.time()-initialtime\n",
-    "    print(f\"Average time per question: {finaltime/100}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Average time per question = 8.2282 sec\n",
-    "###### Minimum 3 different webpages are opened (one problemset, oe problem, atleast one of the n editorials), Considering webpage loading time = 2 sec for each. 8.22 sec is pretty reasonable time"
+    "    main(rating_start,rating_end,2)"
    ]
   },
   {
@@ -804,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1314,19 +1442,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Average time per question for 6th page = 4.904 sec"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Page 7 (600-700)"
+    "#### Page 7 (600-700). Also, finding time per question"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1433,13 +1554,28 @@
       "https://codeforces.com/problemset/problem/886/B\n",
       "https://codeforces.com/problemset/problem/886/A\n",
       "https://codeforces.com/problemset/problem/884/B\n",
-      "https://codeforces.com/problemset/problem/883/M\n"
+      "https://codeforces.com/problemset/problem/883/M\n",
+      "Average time per question: 10.35669094324112\n"
      ]
     }
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    main(rating_start,rating_end,7)"
+    "    initialtime= time.time() # initial time\n",
+    "    main(rating_start,rating_end,7)\n",
+    "    finaltime=time.time()-initialtime\n",
+    "    print(f\"Average time per question: {finaltime/100}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average time per question: 10.35669094324112\n",
+    "#### Considering almost 2000 urls are opened (7000*3), with rate limits, 10.35 sec is pretty efficient.\n",
+    "```bash\n",
+    "time.sleep(2)\n",
+    "\n"
    ]
   },
   {
@@ -2242,12 +2378,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if os.path.exists('ques_data.json'):\n",
+    "#     with open('ques_data.json', 'r') as f:\n",
+    "#         data = json.load(f)\n",
+    "\n",
+    "# len(data.keys())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Thank you :)\n",
     "You can refer to the **json file.**\n",
-    "89/700 cases of \"No solution found\". 611 solution found for 700 queries (87.28%)."
+    "79/700 cases of \"No solution found\". 624 solution found for 703 queries (88.762%)."
    ]
   }
  ],
